--- a/index.html
+++ b/index.html
@@ -1,35 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
-
-  <title>John Doe - Business Administration</title>
-
+  <meta name="description" content="I'm going to show you the steps on how to become a lawyer!">
+  <meta name="author" content="862202506">
+  <title>Jasmin lopez - Political Science</title>
   <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+  <link href="shortcut icon" rel="img/website.ico">
   <!-- Custom fonts for this template -->
   <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
-
   <!-- Custom styles for this template -->
   <link href="css/resume.min.css" rel="stylesheet">
-
 </head>
-
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Jasmin Lopez</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/Jasminlopez.png.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +50,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Jasmin Lopez
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
-
-        Enter bio here<br><br>
-
-        Enter bio here
+        <div class="subheading mb-5">Political Science📚</div>
+        <p class="lead mb-4"> Hi i'm Jasmin! You can call me Jaz! I am Mexican American and I love tacos! I am a first gen student, which means I am the first one in my family to go to college. 
+        This is something I am really proud of because I will be able to set an example for my siblings and other apiring individuals.
+        <br><br> I want to  pursue a career in law because I want people to get justice and overall help my community. 
+        Here, I will show you the steps I will be taking to become a Lawyer. First, I will be recieving my Bachelors degree in Political Science. Then, I will have to determine my LSAT requirements. Afterwards, I will enroll in Law school and take the the Multistate Professional Responsibility Exam. Finally, I will have to obtain my license. 
+         <br><br> 
+        At the moment I have no professional experience, but I hope to gain some very soon!  If you like to ask me any questions please feel free to reach out!
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.instagram.com/jasmina_spammmm/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/Jasminlopez487">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="socialicon-3" href="https://www.facebook.com/profile.php?id=100066813439776"
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:jlope487@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,54 +84,49 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Communtiy Service</h3>
+            <div class="subheading mb-3"><a target="_blank" href=https://www.pomonaca.gov/>Volunteer</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • translated at a local hospital for Hispanic patients<br> 
+              • sorted goods at the food bank<br>
+              • helped sell at a rummage sell at my church<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">April 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Upward Bound</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.mtsac.edu/upwardbound/">Member</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • attended meetings and tutoring<br>
+              • volunteered at events<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary"> August 2018 - May 2020</span>
           </div>
         </div>
-
-
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Latina Club</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ganesha.pusd.org/">Member</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • sold food at cultura night<br>
+            • volunteered at football games<br>
+            • promoted events<br>
+            • Translated at events<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">August 2020 - May2020</span>
           </div>
         </div>
-
-
-
-      </div>
+        </div>
 
     </section>
 
@@ -152,36 +139,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Department of Political Science</div>
+            <div>BA in Political Science</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2020 - present</span>
           </div>
         </div>
-
+      <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
+          <div class="resume-content">
+            <h3 class="mb-0">Ganesha High School</h3>
+            <div class="subheading mb-3">High School Diploma</div>
+            <div> Graduated top of my class</div>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2016- May 2020</span>
+          </div>
+        </div>
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">UC Riverside</h3>
+            <div class="subheading mb-3"> University Honors Program</div>
+            <div>Certificate</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2020- Present</span>
           </div>
         </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
-
       </div>
     </section>
 
@@ -191,7 +175,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+    <img src="img/image3.jpeg" width="500px">
+    <img src="img/image7.jpeg" width="500px"><br>
+    <img src="img/image8.jpeg" width="500px">
+    <img src="img/image9.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +186,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Jasmin Lopez</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
